# ErgasiaNPL

./: .gitignore  README.md  pyproject.toml
Παραδοτέο_1/A/: custom_reconstruction.py
Παραδοτέο_1/B/: PEGASUS.py  language_tool.py  t5.py
Παραδοτέο_2/: cosine_analysis.py
Παραδοτέο_3/: masked_clause_analysis.py  τεχνική_αναφορά.md
